Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Werewolf: Fixed a grammatical error. Thanks TAD!
    * Werewolf: Fixed a bug that occasionally caused a person to get wolf
      twice in the same game.
    * Werewolf: Fixed a typo that broke the gun on occasion.
    * Fixed a minor retract bug in Werewolf.
    * Fixed two major bugs in Werewolf that messed up game play.
    * Fixed several bugs and changed around JOIN/START/BEGIN in Werewolf.
    * Fixed parsing of host masks with / in them. (if it was broken)
    * Werewolf: Fixed a leave before game begin bug.
    * Aliases now work in PM's to the bot too.
    * Added an epic, Werewolf module.
    * Made slog() saner.
    * Syntax for mod_init() changed. Package name is no longer required.
    * Added German translation to Greet help hash. - nridley
    * Added German translation to FML help hash. - nridley
    * Added German translation to Eval help hash. - nridley
    * Added German translation to EightBall help hash. - nridley
    * Added German translation to Dictionary help hash. - nridley
    * Added German translation to Calc help hash. - nridley
    * Added German translation to Bitly help hash. - nridley
    * Added German translation to AUR help hash. - nridley

3.0 Alpha 9
===============================================================================
    * Bug fix: Fixed an exploit in QDB RAND.
    * UNO: Fixed a formatting issue in duration.

3.0 Alpha 8
===============================================================================
    * Full support for custom PREFIX installs (including global installs) has
      been completed.
    * Added fastest/slowest game, most cards and most players records to UNO.
    * Fixed a bug in UNO that allowed users to join more than once.
    * Added optional uno:english option. See documentation for UNO.